Fix active class overlap for ties and wins

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header {
     font-size: 75px;
 }
 
-.square > span.active {
+.square > span.active-win {
     animation-name: jumping;
     animation-duration: 1s;
     animation-iteration-count: 1;
@@ -136,7 +136,7 @@ header {
     animation-delay: 1s;
 }
 
-.square > span.active {
+.square > span.active-tie {
     animation-name: shaking;
     animation-duration: 1s;
     animation-iteration-count: 1;
